# Finno-Korean-Hyperwar-Desktop

./: CMakeLists.txt  Finno-Korean-Hyperwar.cpp
Classes/: City.cpp  City.h  Country.cpp  Country.h  Settings.cpp  Settings.h
Files/: Functions.cpp  Functions.h  Game.cpp  Game.h  GameView.cpp  GameView.h  MenuView.cpp  MenuView.h  View.cpp  View.h
Resources/: Settings.json  leroy-hines-alb-explosion-alpha-v2.xcf  map.xcf
